--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mifar</title>
-    <link rel="shortcut icon" href="/Mifar/Images/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -19,65 +19,77 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col">
-                        <a class="p-16px" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="topHeader__title">Mifar</h1>
+                    <div class= "col p-5">
+                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
+                        <h1 class="p-3 topHeader__title">Mifar</h1>
                     </div>
-                    <div class="col d-flex align-items-center d-flex justify-content-center">
-                        <button class="platformButton">Acceso a la plataforma</button>  
+                    <div class="col d-flex align-items-center d-flex justify-content-end p-5">
+                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button>   
                     </div>
                 </div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
-                                <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
-                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
             </header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         <!-- main -->
-        <main class="mainNosotros">
-            <div class="mainNosotros__hombre mainNosotros__hombre--1">
-                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="hombre1"></a>
-                <div class="mainNosotros__textContainer mainNosotros__textContainer--1">
-                    <h3 class="mainNosotros__title mainNosotros__title1">Lorem, ipsum.</h3>
-                    <p class="mainNosotros__p mainNosotros__p--1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+        <main class="container">
+            <div class="container-fluid text-center bg-info p-5 lead">
+                <div class="col-lg-6">
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="img-thumbnail img-fluid" src="Images/hombre1.jpg" alt="hombre1"></a>
+                    <div class="">
+                        <h3 class="p-3 m-2">Lorem, ipsum.</h3>
+                        <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="mainNosotros__hombre mainNosotros__hombre--2">
-                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="hombre2"></a>
-                <div class="mainNosotros__textContainer mainNosotros__textContainer--2">
-                    <h3 class="mainNosotros__title mainNosotros__title--2">Lorem, ipsum.</h3>
-                    <p class="mainNosotros__p mainNosotros__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                <div class="col-lg-6">
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="img-thumbnail img-fluid" src="Images/hombre2.jpg" alt="hombre2"></a>
+                    <div class="2">
+                        <h3 class="p-3 m-2">Lorem, ipsum.</h3>
+                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="mainNosotros__hombre mainNosotros__hombre--3">
-                <a href="https://www.linkedin.com/" target="_blank"><img class="mainNosotros__img mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="hombre3"></a>
-                <div class="mainNosotros__textContainer mainNosotros__textContainer--3">
-                    <h3 class="mainNosotros__title mainNosotros__title--3">Lorem, ipsum.</h3>
-                    <p class="mainNosotros__p mainNosotros__p--3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                <div class="col-lg-6">
+                    <a href="https://www.linkedin.com/" target="_blank"><img class="img-thumbnail img-fluid" src="Images/hombre3.jpg" alt="hombre3"></a>
+                    <div class="">
+                        <h3 class="p-3 m-2">Lorem, ipsum.</h3>
+                        <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                    </div>
                 </div>
             </div>
         </main>
         <!-- Footer -->
-        <footer>
-            <div class="footerText">
-                <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
-                <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
-            </div>
-            <div class="footerRedes">
-                <a class="footerRedesLink footerRedesLink__instagram" href="https://instagram.com" target="_blank"><img src="Images/instagramlogo.svg" alt="Instagram"></a>
-                <a class="footerRedesLink footerRedesLink__twitter" href="https://twitter.com" target="_blank"><img src="Images/twitterlogo.svg" alt="Twitter"></a>
-                <a class="footerRedesLink footerRedesLink__facebook" href="https://facebook.com" target="_blank"><img src="Images/facebooklogo.svg" alt="Facebook"></a>
+        <footer class="">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
+                </div>
+                <div class="col-md-6 justify-items-center align-content-center p-3">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img src="Images/instagram.svg" ></svg></a>
+                        </div>
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img src="Images/twitter.svg" alt="Twitter"></a>
+                        </div>
+                        <div class="row w-25">
+                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img src="Images/facebook.svg" alt="Facebook"></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
