--- a/prestadores.html
+++ b/prestadores.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mifar</title>
-    <link rel="shortcut icon" href="/Mifar/Images/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
     <!-- Css Comentado -->
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -19,65 +19,79 @@
             <!-- Header -->
             <header>
                 <div class="row">
-                    <div class= "col">
-                        <a class="p-16px" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="topHeader__title">Mifar</h1>
+                    <div class= "col p-5">
+                        <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
+                        <h1 class="p-3 topHeader__title">Mifar</h1>
                     </div>
-                    <div class="col d-flex align-items-center d-flex justify-content-center">
-                        <button class="platformButton">Acceso a la plataforma</button>  
+                    <div class="col d-flex align-items-center d-flex justify-content-end p-5">
+                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
-                                <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
-                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
             </header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
     <!-- Main -->
-    <main class="mainPrestadores">
-        <div class=mainPrestadores__div>
-            <div class="textConteiner__prestadores">
-                <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
-                <p class="mainPrestadores__p mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                <ul class="mainPrestadores__ul mainPrestadores__ul--1">
-                    <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet.</li>
-                    <li class="mainPrestadores__li--link">Lorem, ipsum dolor sit amet consectetur.</li>
-                    <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet.</li>
-                </ul>
-                <p class="mainPrestadores__p mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
-                <ul class="mainPrestadores__ul mainPrestadores__ul--2">
-                    <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet consectetur.</li>
-                    <li class="mainPrestadores__li--link">Lorem ipsum dolor sit.</li>
-                    <li class="mainPrestadores__li--link">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                </ul> 
-            </div>    
-            <img class="mainPrestadores__img hover__img" src="Images/hospital.jpg" alt="hospital">
+    <main class="m-3 bg-info">
+        <div class="container-fluid">
+            <div class="col">
+                <div class="lead text-center m-3 p-3">
+                    <h2 class="">Lorem, ipsum.</h2>
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
+                    <ul class="text-decoration-none list-unstyled">
+                        <li class="">Lorem ipsum dolor sit amet.</li>
+                        <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
+                        <li class="">Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
+                    <ul class="text-decoration-none list-unstyled">
+                        <li class="">Lorem ipsum dolor sit amet consectetur.</li>
+                        <li class="">Lorem ipsum dolor sit.</li>
+                        <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                    </ul>
+                </div>
+                <div class="text-center m-3 p-3">
+                    <img class="img-thumbnail img-fluid" src="Images/hospital.jpg" alt="hospital">
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer -->
-    <footer>
-        <div class="footerText">
-            <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
-            <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
-        </div>
-        <div class="footerRedes">
-            <a class="footerRedesLink footerRedesLink__instagram" href="https://instagram.com" target="_blank"><img src="Images/instagramlogo.svg" alt="Instagram"></a>
-            <a class="footerRedesLink footerRedesLink__twitter" href="https://twitter.com" target="_blank"><img src="Images/twitterlogo.svg" alt="Twitter"></a>
-            <a class="footerRedesLink footerRedesLink__facebook" href="https://facebook.com" target="_blank"><img src="Images/facebooklogo.svg" alt="Facebook"></a>
+    <footer class="">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start">
+                <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
+            </div>
+            <div class="col-md-6 justify-items-center align-content-center p-3">
+                <div class="row justify-content-center align-items-center">
+                    <div class="row w-25">
+                        <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img src="Images/instagram.svg" ></svg></a>
+                    </div>
+                    <div class="row w-25">
+                        <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img src="Images/twitter.svg" alt="Twitter"></a>
+                    </div>
+                    <div class="row w-25">
+                        <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img src="Images/facebook.svg" alt="Facebook"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
-    </div>
+</div>
     <!-- Bootstrap Link JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
