--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 <div class="col text-center">
                     <h2 class="p-3 m-1">Lorem, ipsum.</h2>
                     <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
-                    <img class="img-thumbnail img-fluid m-1" src="Images/contactsample.jpg" alt="contactsample">
+                    <img class="img-thumbnail col-lg-6 img-fluid m-1" src="Images/contactsample.jpg" alt="contactsample">
                 </div>
                 <!-- Form -->
                 <div class="col text-center">
