--- a/prestadores.html
+++ b/prestadores.html
@@ -63,8 +63,8 @@
                         <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
                     </ul>
                 </div>
-                <div class="text-center m-3 p-3">
-                    <img class="img-thumbnail img-fluid" src="Images/hospital.jpg" alt="hospital">
+                <div class="text-center m-3 p-5">
+                    <img class="img-thumbnail col-lg-6 img-fluid" src="Images/hospital.jpg" alt="hospital">
                 </div>
             </div>
         </div>
