Bootstrap arreglos entre coder

--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
                             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
         <!-- Main -->
         <main class="container bg-info">
             <div class="container-fluid p-5">
-                <div class="col text-center">
+                <div class="col text-center lead">
                     <h2 class="p-3 m-1">Lorem, ipsum.</h2>
                     <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
                     <img class="img-thumbnail col-lg-6 img-fluid m-1" src="Images/contactsample.jpg" alt="contactsample">
@@ -56,13 +56,13 @@
                 <div class="col text-center">
                     <form class="m-5" action="">
                         <div class="p-3">
-                            <label class="" for="phone">Ingrese su numero de telefono</label><input class="inputForm__contact inputForm__contact--phone" type="number" name="phone" id="" placeholder="Telefono" required>
+                            <label class="form-group m-3" for="phone">Ingrese su numero de telefono:</label><input class="inputForm__contact inputForm__contact--phone" type="number" name="phone" id="" placeholder="Telefono" required>
                         </div>
                         <div>
-                            <label class="p-3" for="email">Ingrese su Email</label><input class="inputForm__contact inputForm__contact--email" type="email" name="email" id="" placeholder="Email" required>
+                            <label class="p-3 form-group m-5" for="email">Ingrese su Email:</label><input class="inputForm__contact inputForm__contact--email" type="email" name="email" id="" placeholder="Email" required>
                         </div>
                         <div class="">
-                            <label class="p-3 m-3" for="extra">Consulta</label><textarea class="inputForm__contact inputForm__contact--extra p-2" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
+                            <label class="p-3 m-3 form-group m-5" for="extra">Consulta:</label><textarea class="inputForm__contact inputForm__contact--extra p-2" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
                         </div>
                         <div>
                             <button type="button" class="btn btn-success m-2">Enviar</button>
