--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="row">
                     <div class= "col p-5">
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
-                        <h1 class="p-3 topHeader__title fs-1">Mifar</h1>
+                        <h1 class="p-3 topHeader__title">Mifar</h1>
                     </div>
                     <div class="col d-flex align-items-center d-flex justify-content-end p-5">
-                        <button class="platformButton">Acceso a la plataforma</button>  
+                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
             </header>
@@ -34,7 +34,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between text-center">
+                        <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
