Bootstrap boton reparado

--- a/asociarse.html
+++ b/asociarse.html
@@ -23,8 +23,8 @@
                         <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="logo" class="top__header--logo"></a>
                         <h1 class="p-3 fs-1 topHeader__title">Mifar</h1>
                     </div>
-                    <div class="col d-flex align-items-center d-flex justify-content-end p-5">
-                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button>   
+                    <div class="col text-center d-flex align-items-center justify-content-center p-5">
+                        <button type="button" class="btn btn-primary">Acceso a la plataforma</button> 
                     </div>
                 </div>
             </header>
